syntax = "proto2";

package groupcachepb;

message GetRequest {
  required string group = 1;
  required string key = 2;
}

message GetResponse {
  optional bytes value = 1;
  optional double minute_qps = 2;
}

service GroupCache {
  rpc Get(GetRequest) returns (GetResponse) {};
}
